style: update backgrounds for text editor

--- a/src/Components/TextEditorModal/TextEditorView/styles.scss
+++ b/src/Components/TextEditorModal/TextEditorView/styles.scss
@@ -2,11 +2,17 @@
 
 .CodeMirror {
   height: 36rem;
-  font-size: 1rem;
+  letter-spacing: inherit;
+  * {
+    font-size: 0.875rem;
+    letter-spacing: 0.06125rem;
+    font-family: "IBM Plex Mono", SFMono-Regular, Consolas, Liberation Mono, Menlo, Courier, monospace !important;
+  }
 }
 
 .CodeMirror-sizer {
   font-size: 1rem;
+
 }
 
 .CodeMirror-hints {
@@ -98,3 +104,18 @@ li.CodeMirror-hint-active {
     width: 100%;
   }
 }
+
+
+.cm-s-material.CodeMirror {
+  background-color: var(--cds-text-01);
+}
+
+.cm-s-material .CodeMirror-gutters {
+  background-color: var(--cds-text-01);
+}
+
+.cm-s-material .CodeMirror-linenumber {
+  color: var(--cds-ui-04);
+  font-size: 0.75rem;
+}
+
