fix: updated approvals in execution

--- a/src/Features/Execution/Main/ExecutionTaskLog/TaskItem/TaskApprovalModal/taskApprovalModal.module.scss
+++ b/src/Features/Execution/Main/ExecutionTaskLog/TaskItem/TaskApprovalModal/taskApprovalModal.module.scss
@@ -1,20 +1,66 @@
-@import "Styles/mixins";
-
-.container {
-  max-width: 50rem;
-
-  :global .bx--modal-content {
-    padding-right: 1rem;
-  }
+.modalContainer {
+  max-height: 51rem;
 }
 
-.trigger {
-  color: var(--cds-interactive-01);
-  cursor: pointer;
-  font-size: 0.875rem;
-  line-height: 1.125rem;
+.modalBody {
+  padding-right: 1rem;
+}
 
-  &:focus {
-    @include focus-outline();
-  }
+.approval {
+  border-top: 0.0625rem solid var(--cds-skeleton-02);
+  padding: 1rem 0 0.5rem 0;
+  position: relative;
+  width: 100%;
+}
+
+.approvalTime {
+  color: var(--cds-text-02);
+  font-size: 0.75rem;
+  letter-spacing: 0.02rem;
+  line-height: 1rem;
+  position: absolute;
+  top: 1rem;
+  right: 0rem;
+}
+
+.componentData {
+  display: flex;
+  margin-bottom: 1.5rem;
+}
+
+.pipelineData {
+  display: flex;
+  margin-bottom: 1rem;
+}
+
+.leftData {
+  width: 12.6875rem;
+}
+
+.inputs {
+  align-items: flex-end;
+  display: flex;
+}
+
+.comment {
+  position: relative;
+  width: 37.75rem;
+}
+
+.commentArea {
+  height: 4.5rem;
+  resize: vertical !important;
+}
+
+.commentLength {
+  font-size: 0.75rem;
+  letter-spacing: 0.32px;
+  line-height: 1rem;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.decisionButtons {
+  margin: 0 0 1rem 1.5rem;
 }
