feat: execution approval updates, wip trigger updates

--- a/src/Features/Execution/Main/ExecutionTaskLog/TaskItem/taskItem.module.scss
+++ b/src/Features/Execution/Main/ExecutionTaskLog/TaskItem/taskItem.module.scss
@@ -197,6 +197,30 @@
   }
 }
 
+.approvalResultsModalContainer {
+  max-height: 32.8125rem;
+  max-width: 37.5rem;
+}
+
+.detailedSection {
+  margin-bottom: 1.5rem;
+}
+
+.sectionHeader {
+  color: #4d5358;
+  font-size: 0.75rem;
+  letter-spacing: 0.00875rem;
+  line-height: 0.9375rem;
+  margin-bottom: 0.5rem;
+}
+
+.sectionDetail {
+  color: #121619;
+  font-size: 0.875rem;
+  letter-spacing: 0.01rem;
+  line-height: 1.125rem;
+}
+
 @keyframes indeterminate {
   0% {
     left: -35%;
