--- a/src/Styles/_carbon-components.scss
+++ b/src/Styles/_carbon-components.scss
@@ -6,6 +6,8 @@ $carbon-addons-bmrg--theme: boomerang;
 @import "~@boomerang-io/carbon-addons-boomerang-react/styles/scss/styles";
 @import "~carbon-components/scss/components/accordion/accordion";
 @import "~carbon-components/scss/components/checkbox/checkbox";
+@import "~carbon-components/scss/components/copy-button/copy-button";
+@import "~carbon-components/scss/components/code-snippet/code-snippet";
 @import "~carbon-components/scss/components/date-picker/date-picker";
 @import "~carbon-components/scss/components/data-table-v2/data-table-v2";
 @import "~carbon-components/scss/components/data-table-v2/data-table-v2-core";
