feat: property jsonPath

--- a/src/Components/ManualApprovalNodeExecution/ManualApprovalNodeExecution.module.scss
+++ b/src/Components/ManualApprovalNodeExecution/ManualApprovalNodeExecution.module.scss
@@ -87,8 +87,8 @@
 }
 
 .waiting {
-  border: 0.1875rem solid var(--cds-support-03);
-  border-color: var(--cds-support-03) !important;
+  border: 0.1875rem solid var(--flow-wait);
+  border-color: var(--flow-wait) !important;
 }
 
 .notstarted,
