--- a/src/Features/Editor/Properties/PropertiesModal/PropertiesModal.module.scss
+++ b/src/Features/Editor/Properties/PropertiesModal/PropertiesModal.module.scss
@@ -18,7 +18,8 @@
   color: var(--cds-brand-02);
   cursor: pointer;
   display: flex;
-  height: 22.625rem;
+  // height: 22.625rem;
+  height: 25.625rem;
   justify-content: center;
   width: 17.625rem;
   @include border-radius();
