feat: some cleanup

--- a/src/Features/Editor/Configure/Token/Token.module.scss
+++ b/src/Features/Editor/Configure/Token/Token.module.scss
@@ -1,6 +1,7 @@
 @import "Styles/mixins";
 
 .detailedListContainer {
+  line-break: anywhere;
   margin-bottom: 2rem;
 }
 
@@ -46,10 +47,6 @@
 
     &:focus {
       @include focus-outline();
-    }
-    path,
-    rect {
-      fill: var(--cds-interactive-01);
     }
   }
 }
