--- a/src/Features/Execution/Main/ExecutionTaskLog/TaskItem/taskItem.module.scss
+++ b/src/Features/Execution/Main/ExecutionTaskLog/TaskItem/taskItem.module.scss
@@ -179,29 +179,6 @@
   line-height: 1.125rem;
 }
 
-.viewApprovalTrigger {
-  color: var(--cds-interactive-01);
-  cursor: pointer;
-  font-size: 0.875rem;
-  line-height: 1.125rem;
-
-  &:focus {
-    @include focus-outline();
-  }
-}
-
-.actionApprovalTrigger {
-  // color: var(--cds-support-03);
-  color: var(--flow-wait);
-  cursor: pointer;
-  font-size: 0.875rem;
-  line-height: 1.125rem;
-
-  &:focus {
-    @include focus-outline();
-  }
-}
-
 .approvalResultsModalContainer {
   max-height: 32.8125rem;
   max-width: 37.5rem;
@@ -220,7 +197,7 @@
 }
 
 .sectionDetail {
-  color: #121619;
+  color: var(--cds-text-01);
   font-size: 0.875rem;
   letter-spacing: 0.01rem;
   line-height: 1.125rem;
