--- a/src/Features/Execution/Main/WorkflowActions/WorkflowActions.module.scss
+++ b/src/Features/Execution/Main/WorkflowActions/WorkflowActions.module.scss
@@ -1,11 +1,9 @@
 @import "Styles/mixins";
 
 .container {
+  align-items: center;
   display: flex;
-  position: absolute;
-  left: 1rem;
-  padding: 0.5rem;
-  top: 0.5rem;
+  padding: 0.5rem 1rem;
   z-index: 1;
 }
 
@@ -13,32 +11,6 @@
   color: var(--cds-text-01);
   font-size: 1rem;
   line-height: 1.25rem;
-  margin-right: 1.5rem;
-  padding: 0.125rem;
-}
-
-.editContainer {
-  cursor: pointer;
-  display: flex;
-  padding: 0.125rem;
-
-  &:focus {
-    @include focus-outline();
-  }
-}
-
-.editIcon {
-  height: 1.5rem;
   margin-right: 0.5rem;
-  width: 1.5rem;
-  path,
-  rect {
-    fill: var(--cds-interactive-01);
-  }
-}
-
-.editText {
-  color: var(--cds-interactive-01);
-  font-size: 1rem;
-  line-height: 1.5rem;
+  padding: 0.125rem;
 }
