feat: update carbon-components version

--- a/src/Features/TaskTemplates/Header/VersionHistory/versionHistory.module.scss
+++ b/src/Features/TaskTemplates/Header/VersionHistory/versionHistory.module.scss
@@ -1,6 +1,7 @@
 @import "Styles/mixins";
 .button {
   align-items: center;
+  cursor: pointer;
   display: flex !important;
   justify-content: center;
   margin-left: 0.5rem;
