--- a/src/Components/TextEditorModal/TextEditorView/styles.scss
+++ b/src/Components/TextEditorModal/TextEditorView/styles.scss
@@ -1,20 +1,15 @@
 @import "Styles/mixins";
 
 .c-textEditorContainer {
-  max-width: "80rem";
-  max-height: "42rem";
-  height: "100%";
-  width: "100%";
-  margin: "auto";
-  overflow-y: "auto";
-  display: "flex";
-  flex-direction: "column";
-  justify-content: "flex-start";
-  padding: "0 2rem";
+  height: 100%;
+}
+
+.react-codemirror2 {
+  height: 90%;
 }
 
 .CodeMirror {
-  height: 36rem;
+  height: 100%;
   letter-spacing: inherit;
   * {
     font-size: 0.875rem;
