fix: update padding

--- a/src/Components/TaskUpdateModal/taskUpdateModal.module.scss
+++ b/src/Components/TaskUpdateModal/taskUpdateModal.module.scss
@@ -67,7 +67,7 @@
 .stateHilighter {
   border: 0.125rem solid transparent;
   border-radius: 0.25rem;
-  padding: 0.5rem 0.5rem 0 0.5rem;
+  padding: 0.5rem;
   &.remove {
     border-color: var(--cds-support-03);
   }
