[73] View and focus tasks log on click (#25)
* feat: view and focus tasks log on click

* feat: implement click in all execution nodes

Co-authored-by: Lucas Grimauth Evangelista <Lucas.Grimauth@ibm.com>
Co-authored-by: Benjamin Ruby <65971197+BenjaminRuby@users.noreply.github.com>

--- a/src/Features/Execution/Main/ExecutionTaskLog/TaskItem/taskItem.module.scss
+++ b/src/Features/Execution/Main/ExecutionTaskLog/TaskItem/taskItem.module.scss
@@ -5,6 +5,10 @@
   position: relative;
   width: 100%;
 
+  &:focus {
+    @include focus-outline(var(--cds-interactive-01), -0.125rem);
+  }
+
   &.completed {
     border-top: 0.25rem solid var(--cds-support-02);
   }
