--- a/src/Features/Execution/Main/ExecutionTaskLog/executionTaskLog.module.scss
+++ b/src/Features/Execution/Main/ExecutionTaskLog/executionTaskLog.module.scss
@@ -164,6 +164,7 @@
   overflow-y: auto;
   opacity: 0.99;
   padding-bottom: 2rem;
+  scroll-behavior: smooth;
   transition: opacity $carbon-motion--timing--productive $carbon-motion--easing--productive;
   width: 100%;
 }
